✨ 기능 추가 : Routine 조회 및 예외발생 테스트 기능 추가 및 리팩토링